<?xml version="1.0" encoding="utf-8"?>

<!--
** Copyright Jonathon Grigg <http://www.jonathongrigg.com> May 2011
** Email me at jonathongrigg@gmail.com if needed for some reason
** 
** Source code licensed under the Open Software License version 3.0
** 	http://www.opensource.org/licenses/osl-3.0
-->

<resources>
    <string name="app_name">Proton</string>
    <string name="app_version">1.3</string>
    <string name="button_get_existing_voltages">Existing</string>
    <string name="button_apply">Apply new voltages</string>
    <string name="stock_voltages">1450 1400 1350 1250 1200 1050 950 950</string>
    <string name="button_default_voltages">Stock</string>
    <string name="app_name_long">Proton Voltage Control</string>
    <string name="recommended_voltages">1475 1400 1330 1230 1180 1030 930 930</string>
    <string name="button_recommended_voltages">Suggested</string>
    <string name="button_remove_boot_settings">Remove Boot Settings</string>
    <string name="checkbox_save_on_boot">Save on Boot</string>
    <string name="download_emergency_boot">Download Emergency Boot Zip</string>
    <string name="unit_voltage"> mV</string>
    <string name="cpu100">100MHz </string>
    <string name="cpu200">200MHz </string>
    <string name="cpu400">400MHz </string>
    <string name="cpu800">800MHz </string>
    <string name="cpu1000">1 GHz </string>
    <string name="cpu1200">1.2 GHz </string>
    <string name="cpu1300">1.3 GHz </string>
    <string name="cpu1400">1.4 GHz </string>
    <string name="settings">Preferences</string>
    <string name="prefs_save">Load voltages on reboot</string>
    <string name="prefs_save_description">The voltages of your choice will automatically be applied with each reboot.</string>
    <string name="download_emergency_boot_short">Emergency Boot Zip</string>  
    <string-array name="theme_array">
		<item>Theme: Proton Red (default)</item>
		<item>Theme: Black</item>
		<item>Theme: Proton Black</item>
    </string-array>
    <string name="theme_instruction">Please reload Proton for theme changes to take effect</string>
    <string name="menu_voltage">Custom Voltages</string>
    <string name="button_custom_voltage">Custom</string>
    <string name="checkbox_prefs_reboot">Reload voltages on reboot</string>
    <string name="button_prefs_save">Save Settings</string>
    <string name="prefs_heading_theme">Select your theme</string>
    <string name="prefs_heading_user">User preferences</string>
    <string name="alert_no_custom_uv">You have not yet set your custom undervolt values in the preferences menu</string>
</resources>
