<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent" android:layout_width="match_parent" 
    android:orientation="vertical">
 
	<!--  <RelativeLayout android:id="@+id/LinearLayout02" android:layout_width="250px" android:layout_height="100px" 
		android:orientation="vertical">
		
		<TextView android:text="@string/stock_voltages" android:id="@+id/TextView01" android:layout_width="fill_parent" 
						android:layout_height="wrap_content" android:layout_marginBottom="5sp" android:background="@color/darker_gray" />
	</RelativeLayout>  -->
	
	<TextView android:text="@string/prefs_heading_theme" android:layout_width="fill_parent" android:background="@color/darker_gray" android:gravity="center_vertical|left"
						android:layout_height="50px" android:layout_marginTop="8px" android:textStyle="bold" android:textSize="8pt" android:paddingLeft="15px" android:textColor="@color/black" />
	<TextView android:text="@string/theme_instruction" android:id="@+id/themeInstruction" android:layout_width="wrap_content" android:layout_height="wrap_content" 
						android:layout_marginBottom="8sp" android:layout_marginTop="3sp" android:textSize="17px" android:paddingLeft="15px" />
	
	
	<Spinner android:id="@+id/themeSpinner" android:layout_width="match_parent" android:layout_height="wrap_content"></Spinner>
	
		
	<TextView android:text="@string/prefs_heading_user" android:layout_width="fill_parent" android:background="@color/darker_gray" android:textStyle="bold" android:gravity="center_vertical|left"
						android:layout_height="50px" android:layout_marginBottom="4sp" android:layout_marginTop="40px"  android:textSize="8pt" android:paddingLeft="15px" android:textColor="@color/black" />
	<!--  save on boot? -->
	<LinearLayout android:layout_width="match_parent" android:id="@+id/linearLayout1" android:orientation="horizontal" android:layout_height="wrap_content" android:baselineAligned="true" android:gravity="center_vertical|left">
		<CheckBox android:text="@string/checkbox_prefs_reboot" android:id="@+id/checkBox1" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
	</LinearLayout>
	
	<Button android:text="@string/button_prefs_save" android:id="@+id/saveSettings" android:layout_marginTop="40sp" android:layout_width="wrap_content" 
						android:layout_height="wrap_content" android:layout_marginLeft="300px" />
	
</LinearLayout>
