<?xml version="1.0" encoding="utf-8"?>

<!--
** Copyright Jonathon Grigg <http://www.jonathongrigg.com> May 2011
** Email me at jonathongrigg@gmail.com if needed for some reason
** 
** Source code licensed under the Open Software License version 3.0
** 	http://www.opensource.org/licenses/osl-3.0
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent" android:layout_width="match_parent" 
    android:orientation="vertical" android:background="@drawable/background_red_stripe">
    
<!--  for debugging    
    <TextView android:id="@+id/tuna" android:layout_height="wrap_content" android:layout_width="fill_parent" />
	<TextView android:id="@+id/tuna2" android:layout_height="wrap_content" android:layout_width="fill_parent" />
 -->
    
    
    <LinearLayout android:layout_width="match_parent" android:id="@+id/linearLayout1" android:orientation="horizontal" android:layout_height="wrap_content" android:layout_gravity="top">
    	<Button android:id="@+id/button2" android:text="@string/button_get_existing_voltages" android:layout_weight="1" android:layout_gravity="top" android:layout_height="75px" android:layout_width="92px" android:textColor="@color/white" android:shadowRadius="0"/>
		<Button android:text="@string/button_custom_voltage" android:id="@+id/custom_button" android:layout_weight="1" android:layout_gravity="top" android:layout_height="75px" android:layout_width="92px" android:textColor="@color/white" android:shadowRadius="0"/>
    	<Button android:text="@string/button_recommended_voltages" android:id="@+id/button4" android:layout_weight="1" android:layout_gravity="top" android:layout_height="75px" android:layout_width="110px" android:textColor="@color/white" android:shadowRadius="0"/>  
    	<Button android:id="@+id/button3" android:text="@string/button_default_voltages" android:layout_weight="1" android:layout_gravity="top" android:layout_height="75px" android:layout_width="77px" android:textColor="@color/white" android:shadowRadius="0"/>
    </LinearLayout>
     
     
	<!--  100MHZ -->
    <LinearLayout android:layout_width="match_parent" android:orientation="horizontal" android:layout_height="wrap_content" android:baselineAligned="true" 
    			  android:paddingLeft="35px" android:layout_marginTop="10sp" android:layout_marginBottom="8sp">
    	<TextView android:text="@string/cpu100" android:layout_height="wrap_content" android:layout_width="150dip" android:textSize="28px" android:gravity="center_vertical|right" android:paddingRight="25px" android:textStyle="bold" />
    	<TextView android:id="@+id/viewText100" android:layout_height="wrap_content" android:layout_width="50dip" android:text="100" android:textSize="28px" />
    	<TextView android:text="@string/unit_voltage" android:layout_height="wrap_content" android:layout_width="30dip" android:paddingLeft="1px" android:textSize="22px" android:gravity="center_vertical|left" />
    </LinearLayout>     
	<!--  200MHZ -->
    <LinearLayout android:layout_width="match_parent" android:orientation="horizontal" android:layout_height="wrap_content" android:baselineAligned="true" 
    			  android:paddingLeft="35px" android:layout_marginTop="8sp" android:layout_marginBottom="8sp">
    	<TextView android:text="@string/cpu200" android:layout_height="wrap_content" android:layout_width="150dip" android:textSize="28px" android:gravity="center_vertical|right" android:paddingRight="25px" android:textStyle="bold" />
    	<TextView android:id="@+id/viewText200" android:layout_height="wrap_content" android:layout_width="50dip" android:text="100" android:textSize="28px" />
    	<TextView android:text="@string/unit_voltage" android:layout_height="wrap_content" android:layout_width="30dip" android:paddingLeft="1px" android:textSize="22px" android:gravity="center_vertical|left" />
    </LinearLayout>     
	<!--  400MHZ -->
    <LinearLayout android:layout_width="match_parent" android:orientation="horizontal" android:layout_height="wrap_content" android:baselineAligned="true" 
    			  android:paddingLeft="35px" android:layout_marginTop="8sp" android:layout_marginBottom="8sp">
    	<TextView android:text="@string/cpu400" android:layout_height="wrap_content" android:layout_width="150dip" android:textSize="28px" android:gravity="center_vertical|right" android:paddingRight="25px" android:textStyle="bold" />
    	<TextView android:id="@+id/viewText400" android:layout_height="wrap_content" android:layout_width="50dip" android:text="100" android:textSize="28px" />
    	<TextView android:text="@string/unit_voltage" android:layout_height="wrap_content" android:layout_width="30dip" android:paddingLeft="1px" android:textSize="22px" android:gravity="center_vertical|left" />
    </LinearLayout>     
	<!--  800MHZ -->
    <LinearLayout android:layout_width="match_parent" android:orientation="horizontal" android:layout_height="wrap_content" android:baselineAligned="true" 
    			  android:paddingLeft="35px" android:layout_marginTop="8sp" android:layout_marginBottom="8sp">
    	<TextView android:text="@string/cpu800" android:layout_height="wrap_content" android:layout_width="150dip" android:textSize="28px" android:gravity="center_vertical|right" android:paddingRight="25px" android:textStyle="bold" />
    	<TextView android:id="@+id/viewText800" android:layout_height="wrap_content" android:layout_width="50dip" android:text="100" android:textSize="28px" />
    	<TextView android:text="@string/unit_voltage" android:layout_height="wrap_content" android:layout_width="30dip" android:paddingLeft="1px" android:textSize="22px" android:gravity="center_vertical|left" />
    </LinearLayout>     
	<!--  1000MHZ -->
    <LinearLayout android:layout_width="match_parent" android:orientation="horizontal" android:layout_height="wrap_content" android:baselineAligned="true" 
    			  android:paddingLeft="35px" android:layout_marginTop="8sp" android:layout_marginBottom="8sp">
    	<TextView android:text="@string/cpu1000" android:layout_height="wrap_content" android:layout_width="150dip" android:textSize="28px" android:gravity="center_vertical|right" android:paddingRight="25px" android:textStyle="bold" />
    	<TextView android:id="@+id/viewText1000" android:layout_height="wrap_content" android:layout_width="50dip" android:text="100" android:textSize="28px" />
    	<TextView android:text="@string/unit_voltage" android:layout_height="wrap_content" android:layout_width="30dip" android:paddingLeft="1px" android:textSize="22px" android:gravity="center_vertical|left" />
    </LinearLayout>     
	<!--  1200MHZ -->
    <LinearLayout android:layout_width="match_parent" android:orientation="horizontal" android:layout_height="wrap_content" android:baselineAligned="true" 
    			  android:paddingLeft="35px" android:layout_marginTop="8sp" android:layout_marginBottom="8sp">
    	<TextView android:text="@string/cpu1200" android:layout_height="wrap_content" android:layout_width="150dip" android:textSize="28px" android:gravity="center_vertical|right" android:paddingRight="25px" android:textStyle="bold" />
    	<TextView android:id="@+id/viewText1200" android:layout_height="wrap_content" android:layout_width="50dip" android:text="100" android:textSize="28px" />
    	<TextView android:text="@string/unit_voltage" android:layout_height="wrap_content" android:layout_width="30dip" android:paddingLeft="1px" android:textSize="22px" android:gravity="center_vertical|left" />
    </LinearLayout>     
	<!--  1300MHZ -->
    <LinearLayout android:layout_width="match_parent" android:orientation="horizontal" android:layout_height="wrap_content" android:baselineAligned="true" 
    			  android:paddingLeft="35px" android:layout_marginTop="8sp" android:layout_marginBottom="8sp">
    	<TextView android:text="@string/cpu1300" android:layout_height="wrap_content" android:layout_width="150dip" android:textSize="28px" android:gravity="center_vertical|right" android:paddingRight="25px" android:textStyle="bold" />
    	<TextView android:id="@+id/viewText1300" android:layout_height="wrap_content" android:layout_width="50dip" android:text="100" android:textSize="28px" />
    	<TextView android:text="@string/unit_voltage" android:layout_height="wrap_content" android:layout_width="30dip" android:paddingLeft="1px" android:textSize="22px" android:gravity="center_vertical|left" />
    </LinearLayout>
	<!--  1400MHZ -->
    <LinearLayout android:layout_width="match_parent" android:orientation="horizontal" android:layout_height="wrap_content" android:baselineAligned="true" 
    			  android:paddingLeft="35px" android:layout_marginTop="8sp" android:layout_marginBottom="8sp">
    	<TextView android:text="@string/cpu1400" android:layout_height="wrap_content" android:layout_width="150dip" android:textSize="28px" android:gravity="center_vertical|right" android:paddingRight="25px" android:textStyle="bold" />
    	<TextView android:id="@+id/viewText1400" android:layout_height="wrap_content" android:layout_width="50dip" android:text="100" android:textSize="28px" />
    	<TextView android:text="@string/unit_voltage" android:layout_height="wrap_content" android:layout_width="30dip" android:paddingLeft="1px" android:textSize="22px" android:gravity="center_vertical|left" />
    </LinearLayout>

	
	<LinearLayout android:id="@+id/linearLayout1" android:orientation="horizontal" android:layout_height="wrap_content" android:baselineAligned="true" android:layout_width="match_parent" android:layout_marginTop="45sp">
    	<Button android:text="@string/button_apply" android:id="@+id/button1" android:layout_height="85px" android:layout_weight="1" android:layout_width="80px" android:textColor="@color/white" android:shadowRadius="0" />
    </LinearLayout>

    
</LinearLayout>
